[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lk21"
author = "Yoga"
license = "MIT"
author-email = "ahmadzaylani001@gmail.com"
home-page = "https://github.com/zYxDevs"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["questionary", "bs4", "requests", "requests-cache", "colorama"]
requires-python = ">=3.9"

[tool.flit.scripts]
lk21 = "lk21.cli:main"
